--- a/sqlalchemy-datatables/examples/pyramid_tut/pyramid_tut/templates/base.jinja2
+++ b/sqlalchemy-datatables/examples/pyramid_tut/pyramid_tut/templates/base.jinja2
@@ -7,7 +7,7 @@
     <meta name="description" content="pyramid web application">
     <meta name="author" content="Pylons Project">
 
-    <title>Alchemy Scaffold for The Pyramid Web Framework</title>
+    <title>EUMETCast Terrestrial Monitoring</title>
 
     <!-- Bootstrap core CSS -->
       <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -37,15 +37,15 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Pyramid tutorial</a>
+          <a class="navbar-brand" href="#">EUMETCast Terrestrial Monitoring</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
             <li><a href="/dt_110x">basic</a></li>
-            <li><a href="/dt_110x_custom_column">basic custom column</a></li>
-            <li><a href="/dt_110x_basic_column_search">basic column search</a></li>
+            <!--li><a href="/dt_110x_custom_column">basic custom column</a></li-->
+            <!--li><a href="/dt_110x_basic_column_search">basic column search</a></li-->
             <li><a href="/dt_110x_advanced_column_search">advanced column search</a></li>
-            <li><a href="/dt_110x_yadcf">yadcf</a></li>
+            <li><a href="/dt_110x_yadcf">Files</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
