--- a/sqlalchemy-datatables/examples/pyramid_tut/pyramid_tut/templates/dt_110x_advanced_column_search.jinja2
+++ b/sqlalchemy-datatables/examples/pyramid_tut/pyramid_tut/templates/dt_110x_advanced_column_search.jinja2
@@ -9,7 +9,7 @@
     <div class="col-lg-12">
       <h2>Users and their address, filter per column.</h2>
       <h3>Try searching id with '>10', or Birthday with '<=1982'</h3>
-      <table id="dt_110x" class="table table-striped" cellspacing="0" width="100%">
+      <table id="dt_110x" class="table table-striped table-hover" cellspacing="0" width="100%">
         <thead>
           <tr>
             <th>Id</th>
