--- a/sqlalchemy-datatables/examples/pyramid_tut/pyramid_tut/templates/dt_110x_yadcf.jinja2
+++ b/sqlalchemy-datatables/examples/pyramid_tut/pyramid_tut/templates/dt_110x_yadcf.jinja2
@@ -3,15 +3,16 @@
 {% block content %}
   <div class="row-fluid">
     <div class="col-lg-12">
-      <h2>DataTables 1.10.x example: Users and their address, with the <a href='https://github.com/vedmack/yadcf' >yadcf</a> plugin</h2>
-      <table id="dt_110x" class="table table-striped" cellspacing="0" width="100%">
+      <table id="dt_110x" class="table table-striped table-hover"
+             cellspacing="0" width="100%">
         <thead>
           <tr>
-            <th>Id</th>
-            <th>Name</th>
-            <th>Address</th>
-            <th>Birthday</th>
-            <th>Age</th>
+            <th>Acknowledge Id</th>
+            <th>Channel</th>
+            <th>File name</th>
+            <th>File size</th>
+            <th>Recipient</th>
+            <th>Timestamp</th>
           </tr>
         </thead>
         <tbody></tbody>
@@ -29,33 +30,46 @@
       var table = $('#dt_110x').DataTable({
         "processing": false,
         "serverSide": true,
+        "lengthMenu": [ 10, 100, 1000, 5000],
+        "columnDefs": [{
+            targets: 0,
+            render: function (data, type, row, meta) {
+                if (type === 'display') {
+                    data = '<a href="show_job?acknowledge_id=' + encodeURIComponent(data) + '">' + data + '</a>';
+                }
+                return data;
+            }
+        }],
         "ajax": "{{ request.route_path('data_yadcf') }}"
       });
 
       yadcf.init(table, [{
-        column_number: 0,
-        filter_type: "multi_select",
-        select_type: "chosen"
+        column_number: 0
       }, {
         column_number: 1,
-        filter_type: "auto_complete"
-      }, {
-        column_number: 2,
-        filter_type: "range_number"
-      }, {
-        column_number: 3,
         filter_type: "multi_select",
         select_type: "chosen"
       }, {
+        column_number: 2,
+        filter_type: "auto_complete"
+      }, {
+        column_number: 3,
+        filter_type: "range_number"
+      }, {
         column_number: 4,
+        filter_type: "multi_select",
+        select_type: "chosen"
+      }, {
+        column_number: 5,
         filter_type: "range_date",
-        date_format: "yyyy-mm-dd",
-        moment_date_format: "YYYY-MM-DD",
+        date_format: "yyyy-mm-dd hh:MM:ss",
+        moment_date_format: "YYYY-MM-DD HH:mm:ss",
         datepicker_type: 'bootstrap-datetimepicker',
         filter_plugin_options: {
           showTodayButton: true,
           showClear: true,
-          format: "YYYY-MM-DD"
+          sideBySide: true,
+          format: "YYYY-MM-DD HH:mm:ss"
         }
       }]);
     });
