Changed recipients URL instead of dt_110x_yadcf

--- a/sqlalchemy-datatables/examples/pyramid_tut/pyramid_tut/templates/base.jinja2
+++ b/sqlalchemy-datatables/examples/pyramid_tut/pyramid_tut/templates/base.jinja2
@@ -45,7 +45,7 @@
             <!--li><a href="/dt_110x_custom_column">basic custom column</a></li-->
             <!--li><a href="/dt_110x_basic_column_search">basic column search</a></li-->
             <li><a href="/dt_110x_advanced_column_search">advanced column search</a></li>
-            <li><a href="/dt_110x_yadcf">Files</a></li>
+            <li><a href="/recipients">Files</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
