--- a/sqlalchemy-datatables/examples/pyramid_tut/pyramid_tut/templates/recipients.jinja2
+++ b/sqlalchemy-datatables/examples/pyramid_tut/pyramid_tut/templates/recipients.jinja2
@@ -40,7 +40,7 @@
                 return data;
             }
         }],
-        "ajax": "{{ request.route_path('data_yadcf') }}"
+        "ajax": "{{ request.route_path('recipients_data') }}"
       });
 
       yadcf.init(table, [{
