--- a/sqlalchemy-datatables/examples/pyramid_tut/pyramid_tut/templates/recipients.jinja2
+++ b/sqlalchemy-datatables/examples/pyramid_tut/pyramid_tut/templates/recipients.jinja2
@@ -3,7 +3,7 @@
 {% block content %}
   <div class="row-fluid">
     <div class="col-lg-12">
-      <table id="dt_110x" class="table table-striped table-hover"
+      <table id="dt_recipients" class="table table-striped table-hover"
              cellspacing="0" width="100%">
         <thead>
           <tr>
@@ -27,7 +27,7 @@
 
   <script type="text/javascript" charset="utf-8">
     $(document).ready(function() {
-      var table = $('#dt_110x').DataTable({
+      var table = $('#dt_recipients').DataTable({
         "processing": false,
         "serverSide": true,
         "lengthMenu": [ 10, 100, 1000, 5000],
