--- a/sqlalchemy-datatables/examples/pyramid_tut/pyramid_tut/templates/base.jinja2
+++ b/sqlalchemy-datatables/examples/pyramid_tut/pyramid_tut/templates/base.jinja2
@@ -13,8 +13,9 @@
       <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <style>
       body {
-        min-height: 2000px;
-        padding-top: 70px;
+          min-height: 2000px;
+          padding-top: 70px;
+          font-size: 10px;
       }
     </style>
 
@@ -45,7 +46,7 @@
             <!--li><a href="/dt_110x_custom_column">basic custom column</a></li-->
             <!--li><a href="/dt_110x_basic_column_search">basic column search</a></li-->
             <li><a href="/dt_110x_advanced_column_search">advanced column search</a></li>
-            <li><a href="/recipients">Files</a></li>
+            <li><a href="/recipients">Recipients</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
