--- a/sqlalchemy-datatables/examples/pyramid_tut/pyramid_tut/templates/show_job.jinja2
+++ b/sqlalchemy-datatables/examples/pyramid_tut/pyramid_tut/templates/show_job.jinja2
@@ -8,7 +8,7 @@
   <div class="row-fluid">
     <div class="col-lg-12">
       <h2>Job Details</h2>
-      <table id="job_details" class="table table-striped" cellspacing="0" width="100%">
+      <table id="job_details" class="table table-condensed table-striped table-hover" cellspacing="0" width="80%">
         <thead>
           <tr>
             <th>Parameter</th>
