--- a/sqlalchemy-datatables/examples/pyramid_tut/pyramid_tut/templates/base.jinja2
+++ b/sqlalchemy-datatables/examples/pyramid_tut/pyramid_tut/templates/base.jinja2
@@ -42,10 +42,8 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="/dt_110x">basic</a></li>
-            <!--li><a href="/dt_110x_custom_column">basic custom column</a></li-->
-            <!--li><a href="/dt_110x_basic_column_search">basic column search</a></li-->
-            <li><a href="/dt_110x_advanced_column_search">advanced column search</a></li>
+            <li><a href="/jobs">Jobs</a></li>
+            <li><a href="/files">Files</a></li>
             <li><a href="/recipients">Recipients</a></li>
           </ul>
         </div><!--/.nav-collapse -->
