--- a/sqlalchemy-datatables/examples/pyramid_tut/pyramid_tut/templates/files.jinja2
+++ b/sqlalchemy-datatables/examples/pyramid_tut/pyramid_tut/templates/files.jinja2
@@ -43,11 +43,15 @@
       });
 
       yadcf.init(table, [{
-        column_number: 0
+        column_number: 0,
+        filter_type: "yadcf_text"
       }, {
-        column_number: 1
+        column_number: 1,
+        filter_type: "yadcf_text",
+        select_type: "chosen"
       }, {
-        column_number: 2
+        column_number: 2,
+        filter_type: "string_contains"
       }, {
         column_number: 3,
         filter_type: "range_number",
