Fixed yacd text search function

--- a/sqlalchemy-datatables/examples/pyramid_tut/pyramid_tut/templates/files.jinja2
+++ b/sqlalchemy-datatables/examples/pyramid_tut/pyramid_tut/templates/files.jinja2
@@ -51,7 +51,8 @@
         select_type: "chosen"
       }, {
         column_number: 2,
-        filter_type: "string_contains"
+        filter_type: "text",
+        select_type: "chosen"
       }, {
         column_number: 3,
         filter_type: "range_number",
