--- a/sqlalchemy-datatables/examples/pyramid_tut/pyramid_tut/templates/show_file.jinja2
+++ b/sqlalchemy-datatables/examples/pyramid_tut/pyramid_tut/templates/show_file.jinja2
@@ -7,8 +7,8 @@
 {% block content %}
   <div class="row-fluid">
     <div class="col-lg-12">
-      <h2>Job Details</h2>
-      <table id="job_details" class="table table-condensed table-striped table-hover" cellspacing="0" width="80%">
+      <h2>File Details</h2>
+      <table id="file_details" class="table table-condensed table-striped table-hover" cellspacing="0" width="80%">
         <thead>
           <tr>
             <th>Parameter</th>
@@ -31,12 +31,12 @@
   <script src="https://cdn.datatables.net/1.10.10/js/jquery.dataTables.min.js"></script>
   <script type="text/javascript" charset="utf-8">
     $(document).ready(function(){
-      var table = $('#job_details').DataTable({
+      var table = $('#file_details').DataTable({
         "processing": false,
         "serverSide": true,
         "ajax": {
-          "url": "{{ request.route_path('job') }}",
-          "data": { "job_id": "{{ request.matchdict['id']}}" }
+          "url": "{{ request.route_path('file') }}",
+          "data": { "file_id": "{{ request.matchdict['id']}}" }
         }
       });
     });
