Fix anomaly on link to jobs from recipients web page

--- a/sqlalchemy-datatables/examples/pyramid_tut/pyramid_tut/templates/recipients.jinja2
+++ b/sqlalchemy-datatables/examples/pyramid_tut/pyramid_tut/templates/recipients.jinja2
@@ -33,10 +33,10 @@
         "serverSide": true,
         "lengthMenu": [ 10, 100, 1000, 5000],
         "columnDefs": [{
-            targets: 0,
+            targets: 5,
             render: function (data, type, row, meta) {
                 if (type === 'display') {
-                    data = '<a href="show_job?acknowledge_id=' + encodeURIComponent(data) + '">' + data + '</a>';
+                    data = '<a href="show_job/' + encodeURIComponent(data) + '">' + data + '</a>';
                 }
                 return data;
             }
