--- a/sqlalchemy-datatables/examples/pyramid_tut/pyramid_tut/templates/base.jinja2
+++ b/sqlalchemy-datatables/examples/pyramid_tut/pyramid_tut/templates/base.jinja2
@@ -45,6 +45,7 @@
             <li><a href="/jobs">Jobs</a></li>
             <li><a href="/files">Files</a></li>
             <li><a href="/recipients">Recipients</a></li>
+            <li><a href="/monitor">Monitor</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
