--- a/sqlalchemy-datatables/examples/pyramid_tut/pyramid_tut/templates/home.jinja2
+++ b/sqlalchemy-datatables/examples/pyramid_tut/pyramid_tut/templates/home.jinja2
@@ -3,7 +3,7 @@
 {% block content %}
   <div class="row">
     <div class="col-lg-12">
-      <center><p>This example is a way to quickly start any new project with Pyramid and use DataTables with server side processing.</p></center>
+      <center><p>Initial prototype for PF-II EUMETCast Terrestrial over Internet monitoring.</p></center>
     </div>
   </div>
 {% endblock %}
