--- a/sqlalchemy-datatables/examples/pyramid_tut/pyramid_tut/templates/roll_mon.jinja2
+++ b/sqlalchemy-datatables/examples/pyramid_tut/pyramid_tut/templates/roll_mon.jinja2
@@ -7,12 +7,18 @@
 {% block content %}
   <div class="row-fluid">
     <div class="col-lg-12">
-      <h2>File Details</h2>
-      <table id="roll_mon" class="table table-condensed table-striped table-hover" cellspacing="0" width="80%">
+      <h2>Rolling Monitoring</h2>
+      <table id="file_details" class="table table-condensed table-striped table-hover" cellspacing="0" width="80%">
         <thead>
           <tr>
-            <th>Parameter</th>
-            <th>Value</th>
+            <th>Time slot</th>
+            <th>Recipient</th>
+            <th>Sent</th>
+            <th>Received</th>
+            <th>Time slot</th>
+            <th>Recipient</th>
+            <th>Sent</th>
+            <th>Received</th>
           </tr>
         </thead>
         <tbody></tbody>
@@ -31,14 +37,31 @@
   <script src="https://cdn.datatables.net/1.10.10/js/jquery.dataTables.min.js"></script>
   <script type="text/javascript" charset="utf-8">
     $(document).ready(function(){
-      var table = $('#roll_mon').DataTable({
+      var table = $('#file_details').DataTable({
         "processing": false,
         "serverSide": true,
         "ajax": {
-          "url": "{{ request.route_path('file') }}",
-          "data": { "file_id": "{{ request.matchdict['id']}}" }
+          "url": "{{ request.route_path('roll_mon_data') }}"
         }
       });
+
+      yadcf.init(table, [{
+        column_number: 0
+      }, {
+        column_number: 1
+      }, {
+        column_number: 2
+      }, {
+        column_number: 3
+      }, {
+        column_number: 4
+      }, {
+        column_number: 5
+      }, {
+        column_number: 6
+      }, {
+        column_number: 7
+      }]);
     });
   </script>
 {% endblock %}
