--- a/sqlalchemy-datatables/examples/pyramid_tut/pyramid_tut/templates/test.jinja2
+++ b/sqlalchemy-datatables/examples/pyramid_tut/pyramid_tut/templates/test.jinja2
@@ -8,29 +8,31 @@
   <div class="row-fluid">
     <div class="col-lg-12">
       <h2>Rolling Monitoring</h2>
-        <p>{{ roll_mon_dict }}</p>
+      <table id="dt_roll_mon" class="table table-striped table-hover" cellspacing="0" width="100%" >
+        <thead>
+          <tr>
+            <th>Time Slot</th>
+            {% for recipient in recipients %}
+            <th>{{ recipient }}</th>
+            {% endfor %}
+          </tr>
+          {% for key in roll_mon_dict.keys() %}
+          <tr>
+            <td>{{ key }}</td>
+            {% for recipient in recipients %}
+            <td>
+            {% if roll_mon_dict[key][recipient] %}
+              {{ roll_mon_dict[key][recipient]['recvf'] }} of {{ roll_mon_dict[key][recipient]['sentf'] }}
+            {% else %}
+              0 of 0
+            {% endif %}
+            </td>
+            {% endfor %}
+          </tr>
+          {% endfor %}
+        </thead>
+        <tbody></tbody>
+      </table>
     </div>
   </div>
 {% endblock %}
-
-<table>
-
-<TR>
-    <TD>Time Slot</TD>
-{% for recipient in recipients %}
-    <TD>{{ recipient }}</TD>
-{% endfor %}
-</TR>
-
-{% for key1 in roll_mon_dict.keys() %}
-<TR>
-    <TD>{{ key1 }}</TD>
-  {% for recipient in recipients %}
-    <TD>{{ roll_mon_dict[key1][recipient]['recvf'] }} of {{ roll_mon_dict[key1][recipient]['sentf'] }}</TD>
-  {% endfor %}
-</TR>
-{% endfor %}
-
-</table>
-
-
