Implemented recipient pre filtering based in URL

--- a/sqlalchemy-datatables/examples/pyramid_tut/pyramid_tut/templates/base.jinja2
+++ b/sqlalchemy-datatables/examples/pyramid_tut/pyramid_tut/templates/base.jinja2
@@ -45,7 +45,8 @@
             <li><a href="/jobs">Jobs</a></li>
             <li><a href="/files">Files</a></li>
             <li><a href="/recipients">Recipients</a></li>
-            <li><a href="/monitor">Monitor</a></li>
+            <li><a href="/stats">Statistics</a></li>
+            <li><a href="/roll_mon">Rolling Monitoring</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
