--- a/sqlalchemy-datatables/examples/pyramid_tut/pyramid_tut/templates/home.jinja2
+++ b/sqlalchemy-datatables/examples/pyramid_tut/pyramid_tut/templates/home.jinja2
@@ -3,7 +3,7 @@
 {% block content %}
   <div class="row">
     <div class="col-lg-12">
-      <center><p>Initial prototype for PF-II EUMETCast Terrestrial over Internet monitoring.</p></center>
+      <p>Initial prototype for PF-II EUMETCast Terrestrial over Internet monitoring.</p>
     </div>
   </div>
 {% endblock %}
