--- a/sqlalchemy-datatables/examples/pyramid_tut/pyramid_tut/templates/jobs.jinja2
+++ b/sqlalchemy-datatables/examples/pyramid_tut/pyramid_tut/templates/jobs.jinja2
@@ -3,7 +3,7 @@
 {% block content %}
   <div class="row-fluid">
     <div class="col-lg-12">
-      <table id="dt_jobs" class="table table-condensed table-striped table-hover"
+      <table id="dt_jobs" class="table table-condensed table-striped table-hover text-nowrap"
              cellspacing="0" width="100%">
         <thead>
           <tr>
