--- a/sqlalchemy-datatables/examples/pyramid_tut/pyramid_tut/templates/recipients.jinja2
+++ b/sqlalchemy-datatables/examples/pyramid_tut/pyramid_tut/templates/recipients.jinja2
@@ -3,7 +3,7 @@
 {% block content %}
   <div class="row-fluid">
     <div class="col-lg-12">
-      <table id="dt_recipients" class="table table-striped table-hover"
+      <table id="dt_recipients" class="table table-striped table-hover text-nowrap"
              cellspacing="0" width="100%">
         <thead>
           <tr>
@@ -31,6 +31,7 @@
       var table = $('#dt_recipients').DataTable({
         "processing": false,
         "serverSide": true,
+        "deferLoading": 10,
         "lengthMenu": [ 10, 100, 1000, 5000],
         "columnDefs": [{
             targets: 5,
@@ -41,7 +42,9 @@
                 return data;
             }
         }],
-        "ajax": "{{ request.route_path('recipients_data') }}"
+        "ajax": {
+            "url": "{{ request.route_path('recipients_data') }}"
+        }
       });
 
       yadcf.init(table, [{
@@ -77,6 +80,15 @@
         column_number: 6,
         filter_type: "range_number"
       }]);
+
+      <!-- Preload a filter, the ajaxSource must be set to true, otherwise it triggers two calls to the server side -->
+      {% if 'recp' in request_get.keys() %}
+          let recp = "{{ request_get['recp'] }}";
+          yadcf.exFilterColumn(table, [[2, [recp]]], true);
+      {% else %}
+        table.draw();
+      {% endif %}
+
     });
   </script>
 
