--- a/sqlalchemy-datatables/examples/pyramid_tut/pyramid_tut/templates/stats.jinja2
+++ b/sqlalchemy-datatables/examples/pyramid_tut/pyramid_tut/templates/stats.jinja2
@@ -3,7 +3,7 @@
 {% block content %}
   <div class="row-fluid">
     <div class="col-lg-12">
-      <table id="dt_monitor" class="table table-striped table-hover"
+      <table id="dt_stats" class="table table-striped table-hover"
              cellspacing="0" width="100%">
         <thead>
           <tr>
@@ -29,11 +29,11 @@
 
   <script type="text/javascript" charset="utf-8">
     $(document).ready(function() {
-      var table = $('#dt_monitor').DataTable({
+      var table = $('#dt_stats').DataTable({
         "processing": false,
         "serverSide": true,
         "lengthMenu": [ 10, 100, 1000, 5000],
-        "ajax": "{{ request.route_path('monitor_data') }}"
+        "ajax": "{{ request.route_path('stats_data') }}"
       });
 
       yadcf.init(table, [{
