Fix bug in monitoring curator that was generating wrong statistics. Performance improved as a result

--- a/sqlalchemy-datatables/examples/pyramid_tut/pyramid_tut/templates/recipients.jinja2
+++ b/sqlalchemy-datatables/examples/pyramid_tut/pyramid_tut/templates/recipients.jinja2
@@ -32,7 +32,8 @@
         "processing": false,
         "serverSide": true,
         "deferLoading": 10,
-        "lengthMenu": [ 10, 100, 1000, 5000],
+        "lengthMenu": [ 500, 1000, 5000, 10000],
+        "pageLength": 500,
         "columnDefs": [{
             targets: 5,
             render: function (data, type, row, meta) {
