--- a/sqlalchemy-datatables/examples/pyramid_tut/pyramid_tut/templates/files.jinja2
+++ b/sqlalchemy-datatables/examples/pyramid_tut/pyramid_tut/templates/files.jinja2
@@ -29,7 +29,8 @@
       var table = $('#dt_files').DataTable({
         "processing": false,
         "serverSide": true,
-        "lengthMenu": [ 10, 100, 1000, 5000],
+        "lengthMenu": [ 500, 1000, 5000, 10000],
+        "pageLength": 500,
         "columnDefs": [{
             targets: 0,
             render: function (data, type, row, meta) {
