--- a/sqlalchemy-datatables/examples/pyramid_tut/pyramid_tut/templates/stats.jinja2
+++ b/sqlalchemy-datatables/examples/pyramid_tut/pyramid_tut/templates/stats.jinja2
@@ -32,7 +32,8 @@
       var table = $('#dt_stats').DataTable({
         "processing": false,
         "serverSide": true,
-        "lengthMenu": [ 10, 100, 1000, 5000],
+        "lengthMenu": [ 500, 1000, 5000, 10000],
+        "pageLength": 500,
         "ajax": "{{ request.route_path('stats_data') }}"
       });
 
